--- a/index.html
+++ b/index.html
@@ -218,11 +218,20 @@
         <div class="progress">
           <div class="progress-bar" data-percentage="40">40%</div>
         </div>
+      </div><div class="skill">
+        <div class="skill-name">Ethical Hacking <span style="color: orange;">In Progress</span></div>
+        </div>
       </div>
       <div class="skill">
         <div class="skill-name">Database (50%)</div>
         <div class="progress">
           <div class="progress-bar" data-percentage="50">50%</div>
+        </div>
+      </div>
+      <div class="skill">
+        <div class="skill-name">Microsoft (60%)</div>
+        <div class="progress">
+          <div class="progress-bar" data-percentage="60">60%</div>
         </div>
       </div>
       <div class="skill">
