--- a/index.html
+++ b/index.html
@@ -207,6 +207,10 @@
     <!-- Skills Section -->
     <section id="skills">
       <h2>Skills</h2>
+       <div class="skill">
+        <div class="skill-name">Ethical Hacking <span style="color: orange;">In Progress</span></div>
+        </div>
+      </div>
       <div class="skill">
         <div class="skill-name">OOP (50%)</div>
         <div class="progress">
@@ -217,9 +221,6 @@
         <div class="skill-name">Data Structures (40%)</div>
         <div class="progress">
           <div class="progress-bar" data-percentage="40">40%</div>
-        </div>
-      </div><div class="skill">
-        <div class="skill-name">Ethical Hacking <span style="color: orange;">In Progress</span></div>
         </div>
       </div>
       <div class="skill">
