--- a/index.html
+++ b/index.html
@@ -164,27 +164,30 @@
     
     /* Responsive Styles */
     @media (max-width: 768px) {
-      /* Keep header horizontal */
       header {
+        /* Keep header horizontal */
         flex-direction: row;
         align-items: center;
+        justify-content: space-between;
       }
       .menu-toggle {
         display: block;
       }
       nav {
         display: none;
-      }
-      nav.active {
-        display: flex;
-      }
-      nav ul {
-        flex-direction: row; /* keep nav items horizontal */
-        justify-content: center;
         width: 100%;
       }
+      nav.active {
+        display: block;
+      }
+      nav ul {
+        flex-direction: column; /* Vertical layout */
+        margin-top: 10px;
+        padding: 0;
+      }
       nav ul li {
-        margin: 0 10px;
+        margin: 10px 0;
+        text-align: center;
       }
     }
   </style>
