--- a/index.html
+++ b/index.html
@@ -2,207 +2,282 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-  <title>Lebanon Desk Clock + Tasks</title>
+  <meta name="viewport" content="width=device-width, initial-scale=1.0, viewport-fit=cover" />
+  <title>Lebanon Clock + Tasks</title>
 
-  <!-- Google Fonts -->
-  <link href="https://fonts.googleapis.com/css2?family=Exo+2:wght@700;900&family=Nunito:wght@300;500;700&display=swap" rel="stylesheet" />
+  <!-- PWA / Full‑screen helpers -->
+  <meta name="theme-color" content="#151515">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black-translucent">
+
+  <!-- Google Fonts -->
+  <link href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@600&family=Inter:wght@400;600&display=swap" rel="stylesheet" />
 
   <style>
+    /* Mobile address‑bar shrink / dynamic viewport fix */
     :root {
-      --accent: #00E9FF;
-      --taskBg: rgba(15, 15, 15, 0.55);
-      --card: rgba(255, 255, 255, 0.06);
-      --bg1: #141e30;
-      --bg2: #243b55;
+      --vh: 1vh;
+      --bg-start: #151515;
+      --bg-end: #1f1f1f;
+      --accent: #8be9fd;
+      --glass: rgba(255, 255, 255, 0.04);
+      --glass-blur: 6px;
+      --border-r: 16px;
+    }
+    @media (orientation: landscape) {
+      body{height:calc(var(--vh)*100);}
     }
 
     *{margin:0;padding:0;box-sizing:border-box;}
     body{
-      font-family:"Nunito",sans-serif;
-      min-height:100vh;
-      display:flex;
-      flex-direction:column;
-      color:#fff;
-      background:linear-gradient(135deg,var(--bg1),var(--bg2));
+      font-family:"Inter",sans-serif;
+      background:linear-gradient(135deg,var(--bg-start),var(--bg-end));
+      display:grid;
+      grid-template-columns:7fr 3fr;
+      color:#eee;
       overflow:hidden;
     }
 
-    /* Particle canvas */
-    #particles{
+    /* ---------- FULLSCREEN BUTTON ---------- */
+    #fsBtn{
       position:fixed;
-      inset:0;
-      z-index:-2;
+      top:18px;right:18px;
+      z-index:10;
+      background:var(--accent);
+      color:#000;
+      border:none;
+      padding:8px 14px;
+      border-radius:var(--border-r);
+      font-weight:700;
+      cursor:pointer;
+      box-shadow:0 2px 6px rgba(0,0,0,0.4);
     }
 
-    /* overlay to soften brightness */
-    #overlay{
-      position:fixed;inset:0;
-      background:rgba(0,0,0,0.35);
-      z-index:-1;
-    }
-
-    /* layout */
-    .main{
-      display:grid;
-      grid-template-columns:7fr 3fr;
-      flex:1;
-      width:100vw;
-      height:100%;
-    }
-
-    /* CLOCK */
+    /* ------------- CLOCK ------------- */
     .clock-wrapper{
       display:flex;
       justify-content:center;
       align-items:center;
+      position:relative;
+      padding:24px;
     }
     .clock{
-      font-family:"Exo 2",monospace;
-      font-size:12vw;
-      font-weight:900;
-      letter-spacing:0.05em;
+      font-family:"Roboto Mono",monospace;
+      font-size:10vw;
+      font-weight:600;
+      letter-spacing:0.06em;
       color:var(--accent);
-      text-shadow:0 0 12px var(--accent);
-      background:var(--card);
-      backdrop-filter:blur(8px);
-      padding:20px 40px;
-      border-radius:20px;
+      background:var(--glass);
+      backdrop-filter:blur(var(--glass-blur));
+      padding:24px 48px;
+      border-radius:var(--border-r);
+      border:1px solid rgba(255,255,255,0.08);
     }
 
-    /* TASKS */
+    /* Subtle particle dots */
+    .particles{position:absolute;inset:0;pointer-events:none;}
+    .dot{
+      position:absolute;
+      width:2px;height:2px;
+      background:rgba(139,233,253,0.3);
+      border-radius:50%;
+      animation:float 30s linear infinite;
+    }
+    @keyframes float{
+      from{transform:translateY(0);}to{transform:translateY(-200vh);}
+    }
+
+    /* ------------- TASKS ------------- */
     .tasks{
       display:flex;
       flex-direction:column;
-      padding:25px 20px 90px;
-      backdrop-filter:blur(6px);
-      background:var(--taskBg);
+      padding:32px 24px 80px;
+      background:var(--glass);
+      backdrop-filter:blur(calc(var(--glass-blur)*1.2));
+      border-left:1px solid rgba(255,255,255,0.05);
     }
-    .tasks h2{
-      margin-bottom:12px;
-      font-weight:700;
-    }
-    .add{display:flex;margin-bottom:15px;}
+    .tasks h2{font-size:1.4rem;margin-bottom:16px;font-weight:600;}
+    .add{display:flex;margin-bottom:18px;}
     .add input{
-      flex:1;padding:10px 14px;font-size:1rem;border:none;border-radius:12px 0 0 12px;outline:none;
+      flex:1;
+      padding:10px 14px;
+      font-size:1rem;
+      border:none;
+      border-radius:var(--border-r) 0 0 var(--border-r);
+      background:rgba(255,255,255,0.08);
+      color:#fff;
+      outline:none;
     }
     .add button{
-      padding:10px 18px;border:none;background:var(--accent);color:#000;font-weight:700;border-radius:0 12px 12px 0;cursor:pointer;transition:opacity .2s;
+      padding:10px 20px;
+      background:var(--accent);
+      color:#000;
+      border:none;
+      border-radius:0 var(--border-r) var(--border-r) 0;
+      font-weight:600;
+      cursor:pointer;
     }
-    .add button:hover{opacity:.8;}
-    ul{list-style:none;overflow-y:auto;flex:1;}
+    ul{list-style:none;flex:1;overflow-y:auto;padding-right:4px;}
     li{
-      background:var(--card);padding:10px 14px;margin-bottom:10px;border-radius:12px;display:flex;justify-content:space-between;align-items:center;transition:opacity .2s;
+      background:rgba(255,255,255,0.05);
+      margin-bottom:10px;
+      padding:10px 14px;
+      border-radius:var(--border-r);
+      display:flex;
+      justify-content:space-between;
+      align-items:center;
     }
-    li.done{opacity:.35;text-decoration:line-through;}
+    li.done{opacity:0.4;text-decoration:line-through;}
     .tick{
-      border:2px solid var(--accent);background:transparent;color:var(--accent);border-radius:8px;width:28px;height:28px;display:flex;align-items:center;justify-content:center;font-weight:800;cursor:pointer;
+      border:2px solid var(--accent);
+      background:transparent;
+      color:var(--accent);
+      border-radius:10px;
+      width:28px;height:28px;
+      display:flex;
+      align-items:center;
+      justify-content:center;
+      font-weight:700;
+      cursor:pointer;
     }
 
-    /* QUOTE BAR */
+    /* ------------- QUOTE BAR ------------- */
     #quoteBar{
-      position:absolute;bottom:50px;left:50%;transform:translateX(-50%);
-      padding:10px 22px;font-style:italic;font-size:1.1rem;background:var(--card);backdrop-filter:blur(8px);border-radius:14px;max-width:90vw;text-align:center;
-      transition:opacity .4s;
+      position:fixed;
+      bottom:48px;
+      left:50%;
+      transform:translateX(-50%);
+      background:var(--glass);
+      backdrop-filter:blur(var(--glass-blur));
+      padding:10px 24px;
+      border-radius:var(--border-r);
+      font-style:italic;
+      max-width:90vw;
+      text-align:center;
+      border:1px solid rgba(255,255,255,0.07);
+      transition:opacity 0.4s;
     }
 
-    /* scrollbar subtle */
-    ul::-webkit-scrollbar{width:8px;}
-    ul::-webkit-scrollbar-thumb{background:rgba(255,255,255,0.2);border-radius:4px;}
+    /* Custom scroll */
+    ul::-webkit-scrollbar{width:6px;}
+    ul::-webkit-scrollbar-thumb{background:rgba(255,255,255,0.15);border-radius:3px;}
 
-    @media (max-height:480px){
-      .clock{font-size:15vw;}
+    /* ---------- RESPONSIVE ---------- */
+    @media(max-width:900px){
+      body{grid-template-columns:1fr;grid-template-rows:60vh 40vh;}
+      .clock{font-size:14vw;padding:16px 32px;}
+      .tasks{border-left:none;border-top:1px solid rgba(255,255,255,0.05);}
+    }
+    @media(max-width:500px){
+      .clock{font-size:18vw;}
+      .tasks h2{font-size:1.2rem;}
     }
   </style>
 </head>
 <body>
-  <canvas id="particles"></canvas>
-  <div id="overlay"></div>
+  <!-- Fullscreen Button -->
+  <button id="fsBtn">⤢ Fullscreen</button>
 
-  <div class="main">
-    <div class="clock-wrapper">
-      <div class="clock" id="clock">--</div>
-    </div>
-
-    <div class="tasks">
-      <h2>My Tasks</h2>
-      <div class="add">
-        <input type="text" id="taskInput" placeholder="Add a task" />
-        <button onclick="addTask()">+</button>
-      </div>
-      <ul id="taskList"></ul>
-    </div>
+  <!-- Clock side -->
+  <div class="clock-wrapper">
+    <div class="clock" id="clock">--</div>
+    <div class="particles" id="particleBox"></div>
   </div>
 
-  <div id="quoteBar">“Seek knowledge from cradle to grave.”</div>
+  <!-- Tasks side -->
+  <div class="tasks">
+    <h2>Tasks</h2>
+    <div class="add">
+      <input type="text" id="taskInput" placeholder="Add a task" />
+      <button id="addBtn">+</button>
+    </div>
+    <ul id="taskList"></ul>
+  </div>
 
-  <script>
-    /* PARTICLE BACKGROUND */
-    const canvas = document.getElementById('particles');
-    const ctx    = canvas.getContext('2d');
-    let w, h, particles;
+  <!-- Quote -->
+  <div id="quoteBar">"Simplicity is the ultimate sophistication."</div>
 
-    function resize(){ w = canvas.width  = window.innerWidth; h = canvas.height = window.innerHeight; }
-    window.addEventListener('resize', resize); resize();
+<script>
+function setVH(){
+  document.documentElement.style.setProperty('--vh', (window.innerHeight * 0.01) + 'px');
+}
+setVH();
+window.addEventListener('resize', setVH);
 
-    function initParticles(count=120){
-      particles = [];
-      for(let i=0;i<count;i++){
-        particles.push({
-          x: Math.random()*w,
-          y: Math.random()*h,
-          r: Math.random()*2+0.5,
-          vx: (Math.random()-0.5)*0.2,
-          vy: (Math.random()-0.5)*0.2,
-          a: Math.random()*0.6+0.2
-        });
-      }
+const particleBox=document.getElementById('particleBox');
+const particleCount=120;
+function createParticles(){
+  particleBox.innerHTML='';
+  const w=window.innerWidth;
+  const h=window.innerHeight;
+  for(let i=0;i<particleCount;i++){
+    const d=document.createElement('span');
+    d.className='dot';
+    d.style.left=Math.random()*w+'px';
+    d.style.top=Math.random()*h+'px';
+    d.style.animationDelay=-(Math.random()*30)+'s';
+    particleBox.appendChild(d);
+  }
+}
+createParticles();
+window.addEventListener('resize',createParticles);
+
+function updateClock(){
+  const options={timeZone:'Asia/Beirut',hour:'2-digit',minute:'2-digit',second:'2-digit',hour12:true};
+  document.getElementById('clock').textContent=new Date().toLocaleTimeString('en-US',options);
+}
+setInterval(updateClock,1000);updateClock();
+
+function addTask(){
+  const input=document.getElementById('taskInput');
+  const txt=input.value.trim();
+  if(!txt) return;
+  const li=document.createElement('li');
+  li.innerHTML=txt+' <button class="tick" onclick="toggleDone(this)">✓</button>';
+  document.getElementById('taskList').appendChild(li);
+  input.value=''; input.focus();
+}
+document.getElementById('addBtn').addEventListener('click', addTask);
+document.getElementById('taskInput').addEventListener('keypress', function(e){
+  if(e.key==='Enter') addTask();
+});
+function toggleDone(btn){ btn.parentElement.classList.toggle('done'); }
+
+const quotes = [
+  "🌿 \"ومن يتقِ الله يجعل له مخرجاً\" – القرآن الكريم",
+  "💡 “Programs must be written for people to read.” – H. Abelson",
+  "🧘‍♂️ \"كن مع الله ترى الله معك\"",
+  "🛡️ “Security is a process, not a product.” – B. Schneier",
+  "⚛️ “React is just JavaScript.” – D. Abramov",
+  "🕊️ \"حب الله هو مفتاح السعادة\"",
+  "🚀 “Debugging is like being the detective...” – F. Fortes",
+  "🌌 “The quieter you become, the more you can hear.” – Ram Dass",
+  "🔐 “Trust, but verify.” – Proverb",
+  "🌟 “Do not grieve. Indeed, Allah is with us.” – Quran 9:40"
+];
+function rotateQuote(){
+  const bar = document.getElementById('quoteBar');
+  bar.style.opacity = 0;
+  setTimeout(() => {
+    bar.textContent = quotes[Math.floor(Math.random()*quotes.length)];
+    bar.style.opacity = 1;
+  }, 300);
+}
+setInterval(rotateQuote, 40*60*1000); rotateQuote();
+
+const fsBtn = document.getElementById('fsBtn');
+fsBtn.addEventListener('click', async () => {
+  if (!document.fullscreenElement) {
+    await document.documentElement.requestFullscreen().catch(err => alert("Fullscreen failed"));
+    if (screen.orientation && screen.orientation.lock) {
+      try { await screen.orientation.lock('landscape'); } catch(e){}
     }
-    function draw(){
-      ctx.clearRect(0,0,w,h);
-      ctx.fillStyle = 'rgba(255,255,255,0.15)';
-      particles.forEach(p=>{
-        ctx.beginPath();
-        ctx.arc(p.x,p.y,p.r,0,Math.PI*2);
-        ctx.fill();
-        p.x += p.vx; p.y += p.vy;
-        if(p.x<0) p.x=w; if(p.x>w) p.x=0;
-        if(p.y<0) p.y=h; if(p.y>h) p.y=0;
-      });
-      requestAnimationFrame(draw);
-    }
-    initParticles(); draw();
-
-    /* CLOCK */
-    function updateClock(){
-      const options={timeZone:'Asia/Beirut',hour:'2-digit',minute:'2-digit',second:'2-digit',hour12:true};
-      document.getElementById('clock').textContent=new Date().toLocaleTimeString('en-US',options);
-    }
-    setInterval(updateClock,1000);updateClock();
-
-    /* TASKS */
-    function addTask(){
-      const inp=document.getElementById('taskInput'); const txt=inp.value.trim(); if(!txt) return;
-      const li=document.createElement('li'); li.innerHTML=`${txt}<button class="tick" onclick="toggle(this)">✓</button>`;
-      document.getElementById('taskList').appendChild(li); inp.value=''; inp.focus();
-    }
-    function toggle(btn){ btn.parentElement.classList.toggle('done'); }
-
-    /* QUOTES */
-    const quotes=[
-      "🌿 \"ومن يتقِ الله يجعل له مخرجاً\" – القرآن الكريم",
-      "💡 “Programs must be written for people to read, and only incidentally for machines to execute.” – Abelson",
-      "🧘‍♂️ \"كن مع الله ترى الله معك\" – صوفية",
-      "🛡️ “Security is a process, not a product.” – Schneier",
-      "⚛️ “React is just JavaScript.” – D. Abramov",
-      "🕊️ \"حب الله هو مفتاح السعادة\"",
-      "🚀 “Debugging is like being the detective in a crime story where you’re also the murderer.” – Fortes",
-      "🌌 “The quieter you become, the more you can hear.” – Ram Dass",
-      "🔐 “Trust, but verify.” – Proverb",
-      "🌟 “Do not grieve. Indeed, Allah is with us.” – Quran 9:40"
-    ];
-    function rotateQuote(){ const bar=document.getElementById('quoteBar'); bar.style.opacity=0; setTimeout(()=>{ bar.textContent=quotes[Math.floor(Math.random()*quotes.length)]; bar.style.opacity=1;},300);}  
-    rotateQuote(); setInterval(rotateQuote,40*60*1000);
-  </script>
+    fsBtn.textContent = '⤢ Exit';
+  } else {
+    document.exitFullscreen();
+    fsBtn.textContent = '⤢ Fullscreen';
+  }
+});
+</script>
 </body>
 </html>
